--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity2">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/viewDataA1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/secAct"
@@ -26,5 +26,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/viewDataA1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
